docs/nginx_s3/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-s3-gateway
  namespace: default
  labels:
    app: nginx-s3-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-s3-gateway
  template:
    metadata:
      labels:
        app: nginx-s3-gateway
    spec:
      containers:
      - name: reviews
        image: ghcr.io/nginxinc/nginx-s3-gateway/nginx-oss-s3-gateway:unprivileged-oss-20241111
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 300m
            memory: 300Mi
          requests:
            cpu: 150m
            memory: 150Mi
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
            httpGet:
              path: /health
              port: http
        readinessProbe:
            httpGet:
              path: /health
              port: http    
        #securityContext:
        #  runAsUser: 1000
