docs/nginx_s3/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-s3-gateway
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: nginx-s3-gateway
  type: ClusterIP
