docs/nginx_s3/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-s3-gateway
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 4m
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    kubernetes.io/ingress.class: nginx
  labels:
    app: nginx-s3-gateway
spec:
  rules:
  - host: local-trableshoot.xxx.xxx
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-s3-gateway
              port:
                number: 8080
